// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button block unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded memori-button--block"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button circle unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--circle memori-button--padded memori-button--icon-only"
  >
    <span
      class="memori-button--icon"
    >
      <svg
        aria-hidden="true"
        class="memori-loading-icon"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders Button danger unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded memori-button--danger"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button disabled unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded"
    disabled=""
  >
    Click me
  </button>
</div>
`;

exports[`renders Button loading unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded memori-button--with-icon memori-button--loading"
    disabled=""
  >
    <span
      class="memori-button--icon loading-icon"
    >
      <svg
        aria-hidden="true"
        class="memori-loading-icon"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    Click me
  </button>
</div>
`;

exports[`renders Button outlined unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--outlined memori-button--rounded memori-button--padded"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button padded unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button primary unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--primary memori-button--rounded memori-button--padded"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button square unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--square memori-button--padded"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded"
  >
    Click me
  </button>
</div>
`;

exports[`renders Button with icon only unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded memori-button--icon-only"
  >
    <span
      class="memori-button--icon"
    >
      <svg
        aria-hidden="true"
        class="memori-loading-icon"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders Button with icon unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded memori-button--with-icon"
  >
    <span
      class="memori-button--icon"
    >
      <svg
        aria-hidden="true"
        class="memori-loading-icon"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    Click me
  </button>
</div>
`;

exports[`renders Button with title unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded"
    title="Button title"
  >
    Click me
  </button>
</div>
`;

exports[`renders empty Button unchanged 1`] = `
<div>
  <button
    class="memori-button memori-button--rounded memori-button--padded"
  />
</div>
`;
